--- a/Rohan_MicroProject1/index.html
+++ b/Rohan_MicroProject1/index.html
@@ -37,7 +37,7 @@
             <p>Dweep.io</p>
             <p>Made with love in India</p>
             <img src="C:\Users\user\Desktop\FSD\Cuvette Notes\LinkedinLogo.png" alt="LinkedIn" width="20px" height="20px">
-            <img src="C:\Users\user\Desktop\FSD\Cuvette Notes\InstagramLogo.png" alt="Insta" width="20px" height="20px">
+            <img src="Rohan_MicroProject1/InstagramLogo.png" alt="Insta" width="20px" height="20px">
             <br>
             <br>
             <p>hello@dweep.io</p>
