--- a/Rohan_MicroProject1/index.html
+++ b/Rohan_MicroProject1/index.html
@@ -22,7 +22,7 @@
         <p id="white">Free - No Spam - No Data Sharing</p>
         </div>
         <div>
-            <img src="C:\Users\user\Desktop\FSD\Cuvette Notes\dweepio1.png" alt="image" height="350px" width="350px">
+            <img src="Rohan_MicroProject1/dweepio1.png" alt="image" height="350px" width="350px">
         </div>
     </div>
     <div class="Section2">
