--- a/Rohan_MicroProject1/index.html
+++ b/Rohan_MicroProject1/index.html
@@ -22,7 +22,7 @@
         <p id="white">Free - No Spam - No Data Sharing</p>
         </div>
         <div>
-            <img src="Rohan_MicroProject1/dweepio1.png" alt="image" height="350px" width="350px">
+            <img src="dweepio1.png" alt="image" height="350px" width="350px">
         </div>
     </div>
     <div class="Section2">
@@ -36,8 +36,8 @@
         <div id="dweep">
             <p>Dweep.io</p>
             <p>Made with love in India</p>
-            <img src="Rohan_MicroProject1/LinkedinLogo.png" alt="LinkedIn" width="20px" height="20px">
-            <img src="Rohan_MicroProject1/InstagramLogo.png" alt="Insta" width="20px" height="20px">
+            <img src="LinkedinLogo.png" alt="LinkedIn" width="20px" height="20px">
+            <img src="InstagramLogo.png" alt="Insta" width="20px" height="20px">
             <br>
             <br>
             <p>hello@dweep.io</p>
