--- a/Rohan_MicroProject2/index.html
+++ b/Rohan_MicroProject2/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="Section1">
-        <img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Group 7.png" alt="NavBar" height="100px" width="1360px">
+        <img src="Group 7.png" alt="NavBar" height="100px" width="1360px">
     </div>
     <div class="Section2">
-        <img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Group 8.png" alt="Image" width="1250px" height="1300px">
-        <img id="smiley" src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Group 2.png" alt="Smiley" width="135px" height="135px">
-        <img id="SIcons" src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Frame 2.png" alt="SMedia Icons" width="100px" height="250px">
+        <img src="Group 8.png" alt="Image" width="1250px" height="1300px">
+        <img id="smiley" src="Group 2.png" alt="Smiley" width="135px" height="135px">
+        <img id="SIcons" src="Frame 2.png" alt="SMedia Icons" width="100px" height="250px">
     </div>
     </body>
 </html>
