--- a/Rohan_MicroProject2/index.html
+++ b/Rohan_MicroProject2/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="Section1">
-        <img src="Group 7.png" alt="NavBar" height="100px" width="screen-width">
+        <img src="Group 7.png" alt="NavBar" height="100px" width="auto">
     </div>
     <div class="Section2">
         <img src="Group 8.png" alt="Image" width="1250px" height="1300px">
