--- a/Rohan_MicroProject2/index.html
+++ b/Rohan_MicroProject2/index.html
@@ -11,30 +11,30 @@
 <body>
     <div class="NavBar">
         <ul>
-            <li id="Headline"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\dappr.png" alt="dappr"
+            <li id="Headline"><img src="dappr.png" alt="dappr"
                     height="38px" width="140px"></li>
             <li class="SubSec" id="home">Home</li>
             <li class="SubSec">About Us</li>
             <li class="SubSec">Information</li>
-            <li class="SubSec">More&nbsp;<img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Vector.png"
+            <li class="SubSec">More&nbsp;<img src="Vector.png"
                     alt="Dropdown"></li>
             <input id="Search" type="text" placeholder="Search....">
-            <img id="Menu" src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Vector1.png" alt="NavBar">
+            <img id="Menu" src="Vector1.png" alt="NavBar">
         </ul>
     </div>
     <div class="container">
         <div class="MainPage">
-            <img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Group 1.png" alt="image" height="400px"
+            <img src="Group 1.png" alt="image" height="400px"
                 width="350px">
             <span id="quote">It's not only writers who can benefit from this free online tool. If<br> you're a
                 programmer who's working on a ......</span>
-            <img id="smiley" src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Group 2.png" alt="smiley"
+            <img id="smiley" src="Group 2.png" alt="smiley"
                 width="120px" height="120px">
         </div>
         <div class="sicon">
-            <img class="WFT" src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\logos_whatsapp-icon.png" alt="WApp" width="50px" height="50px">
-            <img class="WFT" src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Vector (1).png" alt="FB" width="50px" height="50px">
-            <img class="WFT" id="TWT" src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Vector2.png" alt="Twitter" width="40px" height="40px">
+            <img class="WFT" src="logos_whatsapp-icon.png" alt="WApp" width="50px" height="50px">
+            <img class="WFT" src="Vector (1).png" alt="FB" width="50px" height="50px">
+            <img class="WFT" id="TWT" src="Vector2.png" alt="Twitter" width="40px" height="40px">
         </div>
     </div>
     <div class="Tabs">
@@ -80,7 +80,7 @@
                     </tr>
                 </table>
                 <button id="next">Next&nbsp;&nbsp;<img
-                        src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject2\Arrow 1.png" alt="arrow" width="20px"
+                        src="Arrow 1.png" alt="arrow" width="20px"
                         height="12px"></button>
             </div>
         </div>
