--- a/Rohan_MicroProject4/index.html
+++ b/Rohan_MicroProject4/index.html
@@ -30,7 +30,7 @@
     </div>
     <button id="Rules">RULES</button>
     <div id="PopOver">
-        <div><button id="Close"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\X.png" id="Close1"
+        <div><button id="Close"><img src="X.png" id="Close1"
                     alt="close"></button></div>
         <div class="GameRules">Game&nbsp;Rules</div>
         <ul class="RulesList">
@@ -50,11 +50,11 @@
         </ul>
     </div>
     <div class="Game">
-        <div class="Game1"><a class="fist" onclick="playGame('rock')"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\fist.png" alt="Fist"
+        <div class="Game1"><a class="fist" onclick="playGame('rock')"><img src="fist.png" alt="Fist"
                 class="Img1"></a></div>
-        <div class="Game2"><a class="palm" onclick="playGame('paper')"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\palm.png" alt="Palm"
+        <div class="Game2"><a class="palm" onclick="playGame('paper')"><img src="palm.png" alt="Palm"
                 class="Img2"></a></div>
-        <div class="Game3"><a class="victory" onclick="playGame('scissors')"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\victory.png" alt="Victory"
+        <div class="Game3"><a class="victory" onclick="playGame('scissors')"><img src="victory.png" alt="Victory"
                 class="Img3"></a></div>
         <div class="Line1"></div>
         <div class="Line2"></div>
