--- a/Rohan_MicroProject4/page3.html
+++ b/Rohan_MicroProject4/page3.html
@@ -31,7 +31,7 @@
     </div>
     <button id="Rules">RULES</button>
     <div id="PopOver">
-        <div><button id="Close"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\X.png" id="Close1"
+        <div><button id="Close"><img src="X.png" id="Close1"
                     alt="close"></button></div>
         <div class="GameRules">Game&nbsp;Rules</div>
         <ul class="RulesList">
@@ -57,10 +57,10 @@
         <span class="PC">AGAINST&nbsp;PC</span>
         <a href="index.html" class="PlayAgain">Play&nbsp;Again</a>
         <div class="Game2"><img
-                    src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\palm.png" alt="Palm" class="Img2">
+                    src="palm.png" alt="Palm" class="Img2">
         </div>
         <div class="Game3"><img
-                    src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\victory.png" alt="Victory"
+                    src="victory.png" alt="Victory"
                     class="Img3"></div>
         <div class="shadow1"></div>
         <div class="shadow2"></div>
