--- a/Rohan_MicroProject4/page4.html
+++ b/Rohan_MicroProject4/page4.html
@@ -31,7 +31,7 @@
     </div>
     <button id="Rules">RULES</button>
     <div id="PopOver">
-        <div><button id="Close"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\X.png" id="Close1"
+        <div><button id="Close"><img src="X.png" id="Close1"
                     alt="close"></button></div>
         <div class="GameRules">Game&nbsp;Rules</div>
         <ul class="RulesList">
@@ -56,10 +56,10 @@
         <span class="win">TIE&nbsp;UP</span>
         <a href="index.html" class="PlayAgain">REPLAY</a>
         <div class="Game2"><img
-                    src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\fist.png" alt="fist" class="Img2">
+                    src="fist.png" alt="fist" class="Img2">
         </div>
         <div class="Game3"><img
-                    src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\fist.png" alt="fist"
+                    src="fist.png" alt="fist"
                     class="Img3"></div>
     <script src="script4.js"></script>
 </body>
