--- a/Rohan_MicroProject4/page5.html
+++ b/Rohan_MicroProject4/page5.html
@@ -11,7 +11,7 @@
 <body>
     <button id="Rules">RULES</button>
     <div id="PopOver">
-        <div><button id="Close"><img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\X.png" id="Close1"
+        <div><button id="Close"><img src="X.png" id="Close1"
                     alt="close"></button></div>
         <div class="GameRules">Game&nbsp;Rules</div>
         <ul class="RulesList">
@@ -31,8 +31,8 @@
         </ul>
     </div>
     <div>
-        <img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\cup.png" alt="Cup" id="cup">
-        <img src="C:\Users\user\Desktop\FSD\Cuvette\Rohan_MicroProject4\stars.png" alt="Stars" id="stars">
+        <img src="cup.png" alt="Cup" id="cup">
+        <img src="stars.png" alt="Stars" id="stars">
         <span class="hurray">HURRAY!!</span>
         <span class="PC">YOU&nbsp;WON&nbsp;THE&nbsp;GAME</span>
         <a href="index.html" class="PlayAgain">Play&nbsp;Again</a>
